--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "big.js": "^6.1.1",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "fs": "^0.0.1-security"
   },
