--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "big.js": "^6.1.1",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "fs": "^0.0.1-security"
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "eslint": "^8.16.0",
